tests/baselines/reference/es6ClassTest3(strict=true).errors.txt
es6ClassTest3.ts(7,13): error TS2564: Property 'z' has no initializer and is not definitely assigned in the constructor.


==== es6ClassTest3.ts (1 errors) ====
    module M {	
    	class Visibility {
    	    public foo() { };
    	    private bar() { };
            private x: number;
    	    public y: number;
    	    public z: number;
    	           ~
!!! error TS2564: Property 'z' has no initializer and is not definitely assigned in the constructor.
    
    	    constructor() {
    	        this.x = 1;
    	        this.y = 2;
    	    }
    	}
    }